# Sutra-OS

./: .gitignore  .gitmodules  AGENT.md  AGENTS.md  DEPRIORITIZED.md  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  alembic.ini  app.py  config.py  database.py  docker-compose.db.yml  host_manager_main.py  models.py  pyproject.toml
backend/agent/tools/: geocoding.py  weather.py
backend/agent_runtime/: __init__.py  db.py  repository.py  service.py  settings.py  store.py  tools.py
backend/agent_runtime/agent/: __init__.py  agent.py  loop.py  types.py
backend/agent_runtime/ai/: __init__.py  env_keys.py  event_stream.py  providers.py  registry.py  streaming.py  types.py
backend/api/: agents.py  config.py  deps.py  schemas.py
backend/app/: __init__.py  database.py  main.py
backend/app/api/: deps.py  helpers.py  router.py  schemas.py
backend/app/core/: __init__.py  auth.py  runtime.py  settings.py
backend/app/db/: __init__.py  engine.py  session.py
backend/app/hermes/: __init__.py  bridge.py  manager.py  runtime.py
backend/hermes_agent/: __init__.py
backend/host_manager/: __init__.py  config.py  firecracker.py  gcp_disk.py  main.py  schemas.py
backend/migrations/: env.py
backend/scripts/: db-down.sh  db-up.sh  migrate-create.sh  migrate-downgrade.sh  migrate-upgrade.sh
backend/tests/: conftest.py  test_agent_loop.py  test_api.py  test_auth_and_agents.py  test_chat_routes.py  test_chat_service_and_runtime.py  test_host_manager_runtime.py  test_runtime_router.py  test_runtime_service.py
(+72 files in other folders)
